Add JPEG to WEBP Conversion with WebAssembly test.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3.3'
 services:
   dev:
     build: .
+    working_dir: '/cpp-dev/src/'
+    ports:
+      - '5000:5000'
     volumes:
-      - type: bind
-        source: .
-        target: /cpp-dev
+      - .:/cpp-dev
